<resources>
    <string name="app_name">VShkole</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="repeat_password">Repeat password</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_music">Music</string>
    <string name="download_picture">Download picture</string>
    <string name="take_picture">Take picture</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="change_avatar">Change avatar</string>
    <string name="songs">SONGS</string>
    <string name="no_songs_found">NO SONGS FOUND</string>
    <string name="mini_chatgpt">Mini ChatGPT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_here">Write here</string>
    <string name="welcome_to_mini_chatgpt_ntry_it_out_now">Welcome to Mini ChatGPT\nTry it out now</string>
</resources>